# pygames

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __main__.py  pyproject.toml
src/pygames/: __init__.py  _application.py  application.py  blackjack.py  hangman.py  magic8ball.py  magic_8_ball.py  tic_tac_toe.py
tests/: test_application.py  test_hangman.py
