[project]
name = "pygames"
version = "0.1.0"
description = ""
authors = [
    {name = "mellowghostyx",email = "mellowghostyx@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "pygames", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
