[project]
name = "pygames"
version = "0.1.0-alpha"
description = ""
authors = [
    {name = "mellowghostyx",email = "mellowghostyx@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argcomplete (>=3.6.3,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]

[project.scripts]
pygames = "pygames.__init__:run_cli"

[tool.poetry]
packages = [{include = "pygames", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
